# Vault

./: .gitignore  CLAUDE.md  Cargo.toml  GAP-ANALYSE-prod.md  Makefile  PLAN-goamet-vault.md  README.md  SECURITY.md
.claude/: settings.local.json
demo/: README.md  demo_app.sh
internal-service-auth/: Cargo.toml
internal-service-auth/src/: lib.rs
packaging/sudoers.d/: svc-vault
scripts/: create_cred.sh  cred_test.sh  render_dropin.sh  service-smoke.sh  smoke-check.sh
service-secrets/: Cargo.toml
service-secrets/src/: lib.rs
services/: action-executor.conf  action-executor.optional.conf.example  auth.conf  auth.optional.conf.example  chat-api.conf  chat-api.optional.conf.example  data-sync-v2.conf  data-sync-v2.optional.conf.example  email-service.conf  email-service.optional.conf.example  example.conf  memory-manager.conf  memory-manager.optional.conf.example  vault-demo.conf  vault-test-env.conf  vault-test-longrun.conf  vault-test-multi.conf  vault-test-simple.conf
src/: constants.rs  lib.rs  main.rs
src/cli/: audit.rs  credential.rs  doctor.rs  dropin.rs  health.rs  init.rs  migrate.rs  mod.rs  plan.rs  test.rs  verify.rs
src/core/: audit_log.rs  credstore.rs  dropin_gen.rs  file_lock.rs  metadata.rs  mod.rs  paths.rs  service_map.rs
src/models/: credential.rs  mod.rs  policy.rs  vault_config.rs
src/util/: fs.rs  journald.rs  mod.rs  path.rs  privilege.rs  systemd.rs
units/: vault-cred-test.service  vault-demo.service
units/chat-api.service.d/: credentials.conf
units/vault-demo.service.d/: credentials.conf
(+6 files in other folders)
