[package]
name = "goamet-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "color"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
dialoguer = "0.11"
tempfile = "3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
