[package]
name = "goamet-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "color"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
dialoguer = "0.11"
fs2 = "0.4"
glob = "0.3"
nix = { version = "0.29", features = ["user"] }
tempfile = "3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
zeroize = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
